kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sih-final-frontend-service
spec:
  type: ClusterIP
  selector:
    name: sih-final-frontend-pod
  ports:
    - port: 80
      targetPort: 80
