kube/ingress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource-final
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: 'letsencrypt-production-final'
spec:
  tls:
    - hosts:
        - primal6.tech
      secretName: letsencrypt-production-primal-final
  rules:
    - host: primal6.tech
      http:
        paths:
          - path: /
            backend:
              serviceName: sih-final-frontend-service
              servicePort: 80
          - path: /api/graphql
            backend:
              serviceName: sih-final-backend-service
              servicePort: 80
